/* If any changes are made to this file, please make sure to build and update the protobuf-extension.jar in /extension (steps are in README.md) */
syntax = "proto3";
option java_multiple_files = true;
package grpc.demoApp;

service ProtobufService {
  rpc getStockByItemId(GetStockByItemIdRequest) returns(GetStockByItemIdResponse);
  rpc getItemsInStock(GetItemsInStockRequest) returns(stream Item);
  rpc updateItemsInStock(stream UpdateItemsInStockRequest) returns(stream Item);
}

message GetStockByItemIdRequest {
  int64 id = 1;
}

message GetStockByItemIdResponse {
  int32 stock = 1;
}

enum Operation {
  REMOVE = 0;
  ADD = 1;
}

message UpdateItemsInStockRequest {
  int64 id = 1;
  Operation operation = 2;
  int32 value = 3;
}

message Item {
  int64 id = 1;
  string name = 2;
  int32 stock = 3;
}

message GetItemsInStockRequest {}